# neurorep_bot

./: .env  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
bot/: __main__.py  callbacks.py  config.py  language.py
bot/db/: commands.py  settings.py
bot/db/repo/: __init__.py  base_repo_module.py
